# backend/src/main/java/awe/ideeninitiative/controller/BenutzerController.java
@@ -9,13 +9,9 @@ import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.transaction.annotation.Transactional;
-import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.ArrayList;
-import java.util.List;
 @CrossOrigin(origins = "http://localhost:8080")
 @RestController
 public class BenutzerController implements awe.ideeninitiative.api.BenutzerApi {
@@ -31,7 +27,7 @@ public class BenutzerController implements awe.ideeninitiative.api.BenutzerApi {
     }
 
     @Override
-    public ResponseEntity<String> benutzerAnlegen(Benutzer benutzer){
+    public ResponseEntity<String> benutzerRegistrieren(Benutzer benutzer){
         logger.error(benutzer.getVorname());
         Mitarbeiter neuerMitarbeiter = MitarbeiterBuilder.aMitarbeiter()//
                 .withBenutzername(benutzer.getBenutzername())//
@@ -39,7 +35,7 @@ public class BenutzerController implements awe.ideeninitiative.api.BenutzerApi {
                 .withNachname(benutzer.getNachname())//
                 .withEmail(benutzer.getEmail())//
                 .withPasswort(benutzer.getPasswort()).build(); //TODO: Passwort verschlüsseln!
-        benutzerService.mitarbeiterAnlegen(neuerMitarbeiter);
+        benutzerService.mitarbeiterRegistrieren(neuerMitarbeiter);
         return ResponseEntity.ok(neuerMitarbeiter.toString());
     }
 
